Correct site-logo tab-port alignment
Broken when change to SVG was made

--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -77,7 +77,7 @@ $nav-height-land: 73px
   height: 32px
   @include respond-up(tab-port)
     width: 54px
-    width: 54px
+    height: 54px
   @include respond-up(tab-land)
     width: 64px
     height: 64px
@@ -108,6 +108,8 @@ $title-text-baseline: 1.2
 
 
   @include respond-down(tab-port)
+    padding-left: 70px
+
     $title-text-size-tab-port: $title-text-size * 0.7
     font-size: $title-text-size-tab-port
 
